--- a/04-typography/index.html
+++ b/04-typography/index.html
@@ -4,27 +4,73 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Beth+Ellen&family=Devonshire&family=Julee&family=Lakki+Reddy&family=Leckerli+One&family=Marck+Script&family=Meddon&family=Merienda&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+    fontFamily: {
+      'sans': ['ui-sans-serif', 'system-ui'],
+      'serif': ['Tapestry', 'Georgia'],
+      'mono': ['ui-monospace', 'SFMono-Regular'],
+    }
+  }
+      }
+    </script>
     <title>Typography</title>
   </head>
   <body>
     <!-- Font Family -->
+    <div class="font-sans">Hello There!</div>
+    <div class="font-serif">Hello There!</div>
+    <div class="font-mono">Hello There!</div>
 
     <!-- Font Size -->
+    <div class="text-xs">Tailwind is awseome</div>
+    <div class="text-sm">Tailwind is awseome</div>
+    <div class="text-base">Tailwind is awseome</div>
+    <div class="text-lg">Tailwind is awseome</div>
+    <div class="text-xl">Tailwind is awseome</div>
+    <div class="text-2xl">Tailwind is awseome</div>
+    <div class="text-3xl">Tailwind is awseome</div>
 
     <!-- Font Weight -->
+    <div class="font-light">Tailwind is awseome</div>
+    <div class="font-normal">Tailwind is awseome</div>
+    <div class="font-medium">Tailwind is awseome</div>
+    <div class="font-semibold">Tailwind is awseome</div>
+    <div class="font-bold">Tailwind is awseome</div>
 
     <!-- Letter Spacing -->
+    <div class="tracking-tight">Tailwind is awesome</div>
+    <div class="tracking-normal">Tailwind is awesome</div>
+    <div class="tracking-wide">Tailwind is awesome</div>
 
     <!-- Text Alignment -->
+    <div class="text-left">Tailwind is awesome</div>
+    <div class="text-center">Tailwind is awesome</div>
+    <div class="text-right"->Tailwind is awesome</div>
 
     <!-- Text Decoration -->
+    <div class="underline decoration-4 decoration-blue-400">Tailwind is awesome</div>
+    <div class="underline decoration-double">Tailwind is awesome</div>
+    <div class="underline decoration-dotted">Tailwind is awesome</div>
+    <div class="underline decoration-dashed">Tailwind is awesome</div>
+    <div class="underline decoration-wavy">Tailwind is awesome</div>
 
     <!-- Decoration Style -->
 
     <!-- Decoration Offset -->
+    <div class="underline decoration-4 decoration-blue-400 underline-offset-8">Tailwind is awesome</div>
 
     <!-- Text Transform -->
+    <p class="normal-case">Tailwind is awesome</p>
+    <p class="uppercase">Tailwind is awesome</p>
+    <p class="lowercase">Tailwind is awesome</p>
+    <p class="capitalize">Tailwind is awesome</p>
+
   </body>
 </html>
 
