--- a/05-sizing/index.html
+++ b/05-sizing/index.html
@@ -9,26 +9,46 @@
   </head>
   <body>
     <!-- Width -->
+    <div class="bg-black text-white w-4">Hello there!</div>
+    <div class="bg-black text-white w-48">Hello there!</div>
+    <div class="bg-black text-white w-96">Hello there!</div>
 
     <!-- Percentages -->
+    <div class="bg-green-700 text-white w-1/4">Hello there!</div>
+    <div class="bg-green-700 text-white w-1/3">Hello there!</div>
+    <div class="bg-green-700 text-white w-1/2">Hello there!</div>
 
     <!-- Width of the viewport -->
+    <div class="bg-blue-500 text-white w-screen">Hello there!</div>
 
     <!-- 100% of container -->
+    <div class="bg-blue-300 text-white w-full">Hello there!</div>
 
     <!-- min/max content -->
+    <div class="bg-blue-700 text-white w-[300px]">Hello there!</div>
 
     <!-- Arbitrary width -->
+    <div class="bg-blue-500 text-white w-screen">Hello there!</div>
 
     <!-- Max Width -->
-
+    <div class="bg-gray-300 max-w-lg mx-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem laboriosam libero molestiae recusandae accusantium voluptates? Expedita dignissimos amet eveniet dolore nobis odio a sunt, maiores quasi. Modi amet quos dolores!</div>
+    
     <!-- Height (Most of the same options as widths) -->
-
+    <div class="flex item-end">
+      <div class="bg-orange-500 w-20 h-24">Hello there!</div>
+      <div class="bg-orange-500 w-20 h-32">Hello there!</div>
+      <div class="bg-orange-500 w-20 h-40">Hello there!</div>
+      <div class="bg-orange-500 w-20 h-48">Hello there!</div>
+      <div class="bg-orange-500 w-20 h-65">Hello there!</div>
+      <div class="bg-orange-500 w-20 h-96">Hello there!</div>
+    </div>
+    
     <!-- Min Height -->
 
     <!-- Max Height -->
 
     <!-- Full screen height -->
+    <div class="bg-blue-300 text-white h-screen">Hello there!</div>
   </body>
 </html>
 
