--- a/06-layout-position/index.html
+++ b/06-layout-position/index.html
@@ -9,28 +9,71 @@
   </head>
   <body>
     <!-- Positioning -->
+    <div class="relative w-1/2 h-12 bg-red-200">
+      <p>Parent Element</p>
+      <div class="absolute bottom-0 right-0 bg-red-500">
+        <p>Absolute Child</p>
+      </div>
+    </div>
 
     <!-- Top left corner -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <div class="absolute left-0 top-0 h-16 w-16 bg-yellow-300"></div>
+    </div>
 
     <!-- Top right corner -->
-
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <div class="absolute right-0 top-0 h-16 w-16 bg-yellow-300"></div>
+    </div>
     <!-- Bottom left corner -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <div class="absolute left-0 bottom-0 h-16 w-16 bg-yellow-300"></div>
+    </div>
 
     <!-- Bottom right corner -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <div class="absolute right-0 bottom-0 h-16 w-16 bg-yellow-300"></div>
+    </div>
 
     <!-- Span top edge -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <div class="absolute inset-x-0 top-0 h-16 bg-yellow-300"></div>
+    </div>
 
     <!-- Span left edge -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <div class="absolute inset-y-0 left-0 w-16 bg-yellow-300"></div>
+    </div>
 
     <!-- Span right edge -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <div class="absolute inset-y-0 right-0 w-16 bg-yellow-300"></div>
+    </div>
 
     <!-- Span bottom edge -->
+    <div class="relative h-32 w-32 bg-yellow-100">
+      <div class="absolute inset-x-0 bottom-0 h-16 bg-yellow-300"></div>
+    </div>
 
     <!-- Display Classes -->
+    <div>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. <span class="inline font-bold">This is inline</span> Repellat odit obcaecati impedit esse, quam totam expedita cumque, asperiores repudiandae vero dolorem fugit. Molestias esse libero ipsam maiores rem. Eaque voluptatibus dolorem <span class="inline-block font-bold">This is inline block</span> consequuntur quas eveniet itaque eum impedit voluptatum adipisci temporibus. Deleniti minus omnis magnam, <span class="block font-">This is block</span> natus exercitationem dolores vel temporibus cupiditate cum repudiandae distinctio ipsam soluta animi <span class="hidden font-bold">This is hidden</span> doloribus accusamus eligendi!
+    </div>
 
     <!-- Z-Index -->
+    <div class="relative h-36">
+      <div class="absolute w-24 left-10 h-24 bg-blue-300 z-40">1</div>
+      <div class="absolute w-24 left-20 h-24 bg-blue-400">2</div>
+      <div class="absolute w-24 left-40 h-24 bg-blue-500 z-10">3</div>
+      <div class="absolute w-24 left-60 h-24 bg-blue-600 z-20">4</div>
+      <div class="absolute w-24 h-24 left-80 bg-blue-700 z-30">5</div>
+    </div>
 
     <!-- Floats -->
+    <div class="w-1/2">
+      <img class="h-48 w-48 float-left m-4" src="../assets/img/img1.jpg" alt="">
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, eligendi. Praesentium magnam alias recusandae, quam provident quae dolorem nam amet voluptatem aperiam eius aspernatur. Perspiciatis non dolores libero quae dolorem.</p>
+    </div>
   </body>
 </html>
 
