--- a/07-backgrounds-shadows/index.html
+++ b/07-backgrounds-shadows/index.html
@@ -9,12 +9,31 @@
   </head>
   <body>
     <!-- Background Classes -->
+    <div class="h-64 w-72 bg-no-repeat bg-cover bg-center" style="background-image: url('../assets/img/img1.jpg')">
+    </div>
 
     <!-- Gradients -->
+    <div class="h-24 bg-gradient-to-l from-cyan-500 to-blue-500"></div>
 
     <!-- Shadows -->
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, fugit hic minima enim expedita at iste ipsum modi perspiciatis earum.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-blue-500/50">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, fugit hic minima enim expedita at iste ipsum modi perspiciatis earum.
+    </div>
+    <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-red-500">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, fugit hic minima enim expedita at iste ipsum modi perspiciatis earum.
+    </div>  
 
     <!-- Mix Blend -->
+<div class="flex justify-center -space-x-24">
+  <div class="mix-blend-multiply bg-blue-400">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti earum, sequi libero sapiente explicabo et! Quae esse hic quasi est.
+  </div>
+    <div class="mix-blend-multiply bg-pink-400">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, neque et officiis tempore iste est nesciunt consectetur ut earum rem.
+</div>
+</div>
+
   </body>
 </html>
 
